--- a/build.html
+++ b/build.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
-<p>If you can read this then it build and Dockerized successfully!
-</p>
+    <div>
+        <p>If you can read this then it build and Dockerized successfully!</p>
+    </div>
 </html>
