More testing/cleanup.

--- a/build.html
+++ b/build.html
@@ -2,5 +2,14 @@
 <html>
     <div>
         <p>If you can read this then it build and Dockerized successfully!</p>
+        <div>Why Docker?
+        <ul>
+            <li>It's fast</li>
+            <li>It's secure</li>
+            <li>It's cutting edge</li>
+            <li>It grows our skillset</li>
+            <li>Everyone likes Whales right?</li>
+            </ul>
+            </div>
     </div>
 </html>
