--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"> Home</a></li>
-            <li role="presentation"><a href="#about">About <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span></a></li>
-            <li role="presentation"><a href="#portfolio"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"> Portfolio</a></li>
+            <li role="presentation"><a href="#">wut? <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span></a></li>
+            <li role="presentation"><a href="#"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"> banana</a></li>
             <li role="presentation"><a href="#contact"><span class="glyphicon glyphicon-phone-alt" aria-hidden="true"> Contact</span></a></li>
           </ul>
         </nav>
@@ -46,28 +46,14 @@
       <div id="portfolio">
         <div class="row marketing">
           <div class="col-lg-6">
-            <h4>Top Secerts!</h4>
-            <p class="text-primary">Put in some filler text here.</p>
-
             <h4><a href="https://www.docker.com/" target="_blank">Docker!</a></h4>
             <p class="text-primary">Go there for Docker links!</p>
 
-
-            <div><img src="images/sql.jpg" title="sql" class="img-responsive img-circle"></img><br/>
-            </div>
-
           </div>
-
           <div class="col-lg-6">
-            <h4><a href="https://github.com/Valien/Bash-alicious" target="_blank">Bash-alicious!</a></h4>
-            <p class="text-primary">In my role I frequently hack Bash for a variety of things. This repo on GitHub is a compilation of the different
-              scripts that I have written for my work and are now available to anyone to use.</p>
+            <h4>Other Pages</h4>
+            <p class="text-primary">This is the test page called - <a href="build.html">build.html</a></p>
 
-            <div><img src="images/bash.jpg" title="bash" class="img-responsive img-circle"></img>
-            </div>
-            <br/>
-
-          </div>
         </div>
       </div>
       <div id="contact" class="jumbotron">
@@ -76,14 +62,11 @@
         <div>
           <a class="btn btn-default" href="https://twitter.com/Valien" target="_blank" role="button"><i class="fa fa-twitter fa-fw"></i> Twitter</a>
           <a class="btn btn-default" href="https://github.com/Valien" target="_blank" role="button"><i class="fa fa-github fa-fw"></i> GitHub</a>
-          <a class="btn btn-default" href="https://www.linkedin.com/in/allenv" target="_blank" role="button"><i class="fa fa-linkedin fa-fw"></i> LinkedIn</a>
-          <a class="btn btn-default" href="https://about.me/allenv" target="_blank" role="button">About.me</a>
-
 
         </div>
       </div>
       <footer class="footer">
-        <p>&copy; 2017 <a href="http://www.gabesiah.com/" target="_blank">Gabesiah Technologies, Inc.</a> | <a href="http://arvixe.com/?ref_id=Yig8qUAWFNOW" alt="arvixe hosting">hosted by me</a></p>
+        <p>&copy; 2017 <a href="http://www.erwinpenland.com/" target="_blank">Erwin Penland LLC</a> | <a href="https://c.xkcd.com/random/comic/" alt="xkcx">random xkcd</a></p>
       </footer>
 
     </div>
