Forgot to index.html the linky stuff.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <div class="col-lg-6">
             <h4>Other Pages</h4>
             <p class="text-primary">This is the test page called - <a href="build.html">build.html</a></p>
+            <p class="text-primary">This is the test page called - <a href="deployed.html">deployed.html (March 13, 2017)</a></p>
 
         </div>
       </div>
